# Applicant-Resume-Analyzer

./: README.md  app.py  mysql_database_query.txt  pyproject.toml
controllers/: admin_controller.py  applicant_controller.py
models/: resume_model.py
services/: resume_service.py
static/css/: admin.css  admin_login.css  upload.css
templates/: admin.html  admin_login.html  resume_table.html  upload.html
utils/: analysis_charts.py
